--- a/org.openwms/trunk/org.openwms.tms/org.openwms.tms.flex.module/src/main/flex/org/openwms/web/flex/client/tms/view/TransportOrderView.mxml
+++ b/org.openwms/trunk/org.openwms.tms/org.openwms.tms.flex.module/src/main/flex/org/openwms/web/flex/client/tms/view/TransportOrderView.mxml
@@ -101,6 +101,7 @@
             }
             
             private function formatAsDate(item:Object, dg:DataGridColumn):String {
+                trace("Date:"+item[dg.dataField]);
                 if (item[dg.dataField] != null) {
                     return dateFormatter.format(item[dg.dataField]);
                 }
