--- a/org.openwms/trunk/org.openwms.common/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/LocationView.mxml
+++ b/org.openwms/trunk/org.openwms.common/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/LocationView.mxml
@@ -51,7 +51,7 @@
             [In]
             [Bindable]
             /**
-             * Inject.
+             * Inject a model to work on.
              */
             public var commonModelLocator:CommonModelLocator;
 
