Worked on voter pattern
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1325 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/org.openwms.tms/org.openwms.tms.flex.module/src/main/flex/org/openwms/web/flex/client/tms/view/dialogs/RedirectTransportOrderDialog.mxml
+++ b/org.openwms/trunk/org.openwms.tms/org.openwms.tms.flex.module/src/main/flex/org/openwms/web/flex/client/tms/view/dialogs/RedirectTransportOrderDialog.mxml
@@ -58,7 +58,7 @@
                 for each (var order:TransportOrder in redirectLst.dataProvider) {
                 	ids.addItem(order.id);
                 }
-                event.data = ids;
+                event.data = {ids:ids, targetLocationGroup:targetLocationGroupCmb.selectedItem, targetLocation:targetLocationCmb.selectedItem};
                 dispatchEvent(event);
                 closeDialog();
             }
