--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/HeaderComponent.mxml
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/HeaderComponent.mxml
@@ -43,13 +43,14 @@
              * Injected Granite identity object.
              */
             public var identity:Identity;
+            
             [In]
             [Bindable]
             /**
              * Injected Model.
              */
             public var modelLocator : ModelLocator;
-    		
+            
     		private function logout(event:MouseEvent = null):void {
                 identity.logout();
     			dispatchEvent(new ApplicationEvent(ApplicationEvent.LOGOUT));
@@ -58,6 +59,7 @@
             private function lock(event:MouseEvent = null):void {
             	modelLocator.viewBeforeLock = modelLocator.actualView;
                 modelLocator.viewLockedBy = identity.username;
+                modelLocator.fired = true;
                 identity.logout();
                 dispatchEvent(new ApplicationEvent(ApplicationEvent.LOCK));
             }
