--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/business/Services.mxml
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/business/Services.mxml
@@ -49,6 +49,11 @@
         showBusyCursor="true"/>
 
     <granite:SecureRemoteObject
+        id="i18nService"
+        destination="i18nServiceRemote"
+        showBusyCursor="false"/>
+
+    <granite:SecureRemoteObject
         id="userService"
         destination="userServiceRemote"
         showBusyCursor="true"/>
